removed bootable with spring and added distribution repo to upload first version to http://maven.aksw.org/archiva/#artifact/org.aksw.qamel/OQA